--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <!-- nav end -->
 
     <!-- hero start -->
-    <section class="hero-section d-flex align-items-center vh-100">
+    <section class="hero-section custom-hero d-flex align-items-center vh-100">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12">
